# job-listing-tracker

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
deploy/: com.internship-watcher.daily.plist
internship_watcher/: __init__.py  __main__.py  cli.py  config.py  db.py  matching.py  models.py  notify.py
internship_watcher/scrapers/: __init__.py  ashby.py  base.py  company_pages.py  greenhouse.py  lever.py  workday.py
scripts/: run_daily.sh
tests/: test_config.py  test_db.py  test_dedup.py  test_matching.py  test_notify.py  test_workday.py
