[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "internship-watcher"
version = "0.1.0"
description = "Local-first monitor for 2027 summer internship postings."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
internship-watcher = "internship_watcher.cli:main"

[tool.setuptools.packages.find]
include = ["internship_watcher*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
